change user table + routers, add music table
