# docs/swagger.json
@@ -8,16 +8,15 @@
         "title": "Golang Test API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "Invar Poyda"
+            "name": "Dermofet3_3"
         },
         "version": "0.0.1"
     },
-    "host": "localhost:8001",
-    "basePath": "/api/v0.0.1",
+    "host": "localhost:8000",
     "paths": {
         "/auth/signin": {
             "post": {
-                "description": "Авторизация пользователя с использованием email и пароля.",
+                "description": "Авторизация пользователя с использованием имени пользователя и пароля.",
                 "consumes": [
                     "application/json"
                 ],
@@ -35,7 +34,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.UserSignIn"
+                            "$ref": "#/definitions/entity.UserCreate"
                         }
                     }
                 ],
@@ -104,33 +103,24 @@
                 }
             }
         },
-        "/users/email/{email}": {
+        "/users/me": {
             "get": {
                 "security": [
                     {
                         "JwtAuth": []
                     }
                 ],
-                "description": "Получение информации о пользователе по его уникальному идентификатору.",
+                "description": "Получение пользователя по его уникальному идентификатору из JWT токена",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
-                    "application/json"
+                    "text/plain"
                 ],
                 "tags": [
                     "Users"
                 ],
-                "summary": "Получение пользователя по Email",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Email пользователя",
-                        "name": "email",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+                "summary": "Получение пользователя по JWT токену",
                 "responses": {
                     "200": {
                         "description": "Данные пользователя",
@@ -151,9 +141,96 @@
                         "description": "Внутренняя ошибка сервера"
                     }
                 }
+            },
+            "put": {
+                "security": [
+                    {
+                        "JwtAuth": []
+                    }
+                ],
+                "description": "Обновление информации о пользователе по его уникальному идентификатору из JWT токена",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Обновление пользователя по JWT токену",
+                "parameters": [
+                    {
+                        "description": "Данные пользователя для обновления",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.UserCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Обновленные данные пользователя",
+                        "schema": {
+                            "$ref": "#/definitions/view.UserView"
+                        }
+                    },
+                    "400": {
+                        "description": "Некорректный запрос"
+                    },
+                    "401": {
+                        "description": "Неавторизованный запрос"
+                    },
+                    "404": {
+                        "description": "Пользователь не найден"
+                    },
+                    "422": {
+                        "description": "Ошибка при обработке данных"
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера"
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "JwtAuth": []
+                    }
+                ],
+                "description": "Удаление пользователя по его уникальному идентификатору из JWT токена.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Удаление пользователя по JWT токену",
+                "responses": {
+                    "204": {
+                        "description": "Пользователь успешно удален"
+                    },
+                    "400": {
+                        "description": "Некорректный запрос"
+                    },
+                    "401": {
+                        "description": "Неавторизованный запрос"
+                    },
+                    "404": {
+                        "description": "Пользователь не найден"
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера"
+                    }
+                }
             }
         },
-        "/users/id/{id}": {
+        "/users/{id}": {
             "get": {
                 "security": [
                     {
@@ -305,117 +382,39 @@
                 }
             }
         },
-        "/users/me": {
+        "/users/{username}": {
             "get": {
                 "security": [
                     {
                         "JwtAuth": []
                     }
                 ],
-                "description": "Получение пользователя по его уникальному идентификатору из JWT токена",
+                "description": "Получение информации о пользователе по его уникальному идентификатору.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "tags": [
                     "Users"
                 ],
-                "summary": "Получение пользователя по JWT токену",
+                "summary": "Получение пользователя по Username",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username пользователя",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Данные пользователя",
                         "schema": {
                             "$ref": "#/definitions/view.UserView"
                         }
-                    },
-                    "400": {
-                        "description": "Некорректный запрос"
-                    },
-                    "401": {
-                        "description": "Неавторизованный запрос"
-                    },
-                    "404": {
-                        "description": "Пользователь не найден"
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера"
-                    }
-                }
-            },
-            "put": {
-                "security": [
-                    {
-                        "JwtAuth": []
-                    }
-                ],
-                "description": "Обновление информации о пользователе по его уникальному идентификатору из JWT токена",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Обновление пользователя по JWT токену",
-                "parameters": [
-                    {
-                        "description": "Данные пользователя для обновления",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.UserCreate"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Обновленные данные пользователя",
-                        "schema": {
-                            "$ref": "#/definitions/view.UserView"
-                        }
-                    },
-                    "400": {
-                        "description": "Некорректный запрос"
-                    },
-                    "401": {
-                        "description": "Неавторизованный запрос"
-                    },
-                    "404": {
-                        "description": "Пользователь не найден"
-                    },
-                    "422": {
-                        "description": "Ошибка при обработке данных"
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера"
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "JwtAuth": []
-                    }
-                ],
-                "description": "Удаление пользователя по его уникальному идентификатору из JWT токена.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Удаление пользователя по JWT токену",
-                "responses": {
-                    "204": {
-                        "description": "Пользователь успешно удален"
                     },
                     "400": {
                         "description": "Некорректный запрос"
@@ -437,45 +436,12 @@
         "entity.UserCreate": {
             "type": "object",
             "properties": {
-                "age": {
-                    "description": "Возраст",
-                    "type": "integer"
-                },
-                "email": {
-                    "description": "Электронная почта",
-                    "type": "string"
-                },
-                "firstName": {
-                    "description": "Имя",
-                    "type": "string"
-                },
-                "lastName": {
-                    "description": "Фамилия",
-                    "type": "string"
-                },
                 "password": {
                     "description": "Пароль",
                     "type": "string"
                 },
-                "phone": {
-                    "description": "Номер телефона",
-                    "type": "string"
-                },
-                "secondName": {
-                    "description": "Отчество",
-                    "type": "string"
-                }
-            }
-        },
-        "entity.UserSignIn": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "description": "Электронная почта",
-                    "type": "string"
-                },
-                "password": {
-                    "description": "Пароль",
+                "username": {
+                    "description": "Имя пользователя",
                     "type": "string"
                 }
             }
@@ -492,24 +458,12 @@
         "view.UserView": {
             "type": "object",
             "properties": {
-                "age": {
-                    "description": "Возраст",
-                    "type": "integer"
-                },
-                "email": {
-                    "description": "Электронная почта",
-                    "type": "string"
-                },
                 "id": {
                     "description": "ID",
                     "type": "string"
                 },
                 "name": {
-                    "description": "Имя в формате ФИО",
-                    "type": "string"
-                },
-                "phone": {
-                    "description": "Номер мобильного телефона",
+                    "description": "Имя пользователя",
                     "type": "string"
                 }
             }
